# Meerkat-Game-Engine

./: .gitignore  CMakeLists.txt  Game_IS.sln  README.md  unique.txt
Assets/Shaders/: DefaultFragmentShader.glsl  DefaultVertexShader.glsl
Game_IS/: CMakeLists.txt  Game_IS.vcxproj  Game_IS.vcxproj.filters  MyGame.cpp  MyGame.h  main.cpp
Meerkat/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  Keys.h  Meerkat.vcxproj  Meerkat.vcxproj.filters  MeerkatApp.cpp  MeerkatApp.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  Utilities.h  WindowImplementation.h  pch.h  placeholder.cpp
Meerkat/GLFWCode/: GLFWImplementation.cpp  GLFWImplementation.h  OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
Meerkat/include/: Meerkat.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
